add customer operate pages

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,8 +17,9 @@
   <h3>Welcome {{username}}!</h3>
   Your Email is: {{email}}
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    If you get lost, the
+    <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
-
+  <h1><i class="fa fa-flag" aria-hidden="true"></i>&nbsp; Font Awesome</h1>
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
